--- a/assets/style.css
+++ b/assets/style.css
@@ -33,4 +33,28 @@ h1 {
   padding: 10px;
   margin-right: 12px;
   width: 100%;
+  color: white;
+}
+
+.percentage_gold, .percentage_silver, .percentage_platinum, .percentage_palladium ,.country_dropdown{
+  flex-direction:column;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.radio {
+  align-items: center;
+  text-align: center;
+  flex-direction:column;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#rowstable {
+  align-items: left;
+  text-align: left;
+}
+
+.location_name {
+  text-align: right;
 }
