--- a/assets/style.css
+++ b/assets/style.css
@@ -42,6 +42,27 @@ h1 {
   flex-wrap: wrap;
 }
 
+#my_table, #radio_items {
+  color: white;
+  background-color: black;
+}
+
+.linechart1 {
+  overflow-x: auto;
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+  border: 1px solid #ddd;
+}
+
+.mytable {
+  overflow-x: auto;
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+  border: 1px solid #ddd;
+}
+
 .radio {
   align-items: center;
   text-align: center;
