--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 body {
   font-family: 'Roboto', sans-serif;
-  background-color: #192444;
+/*   background-color: #192444; */
   margin: 1%;
 }
 
